# greentic-update

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-automerge.yml  dev-publish.yml
ci/: local_check.sh
src/: binswap.rs  catalogue.rs  enroll.rs  envelope.rs  lib.rs  plan.rs  staging.rs  stream.rs  tls.rs
tests/: enroll.rs  stream.rs
