[package]
name = "greentic-update"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic update platform foundation: signed update plans, installed-artifact catalogue/diff, staging, and airgap envelopes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-update"
homepage = "https://github.com/greenticai/greentic-update"
documentation = "https://docs.greentic.ai/update"
keywords = ["greentic", "updater", "dsse", "in-toto", "signing"]
categories = ["development-tools"]

[features]
mtls = ["dep:reqwest", "dep:x509-parser"]
# Client-side cert enrollment (CSR generation + POST to the Cert-CA). Independent
# of `mtls` (does not need x509 parsing), but pairs with it: enroll → persist →
# build_mtls_client.
enroll = ["dep:reqwest", "dep:rcgen"]
# Binary self-update swap mechanics: archive unpack (tar+gzip, zip),
# atomic verified binary swap + rollback, container detection, and
# Windows running-exe replacement via `self-replace`. OFF by default
# to keep the lean build free of archive / compression deps.
binswap = ["dep:tar", "dep:flate2", "dep:zip", "dep:self-replace"]

[dependencies]
# Only the (ungated) `signing` module is used today (DistClient lands with the
# download phase). `default-features = false` would be ideal, but
# distributor-client's `store_auth` module references the optional `dirs_next`
# crate without a cfg gate, so the minimal build does not compile — see the
# same note in greentic-operator-trust's Cargo.toml.
greentic-distributor-client = ">=1.1.0-dev, <1.2.0-0"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
# Staging FSM (ungated `staging` module): `fs4` for the per-env `.lock` flock and
# the independent per-file audit-log flock; `tempfile` for the write-tmp → fsync
# → rename atomic-write pattern. Both are small, filesystem-only deps — the
# crate's leanness invariant is "no `greentic-deploy-spec` dep", not "no I/O
# deps"; on-disk staging inherently needs these.
fs4 = "0.13"
tempfile = "3"
hex = "0.4"
rcgen = { version = "0.14", optional = true, default-features = false, features = ["pem", "ring"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["rustls", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x509-parser = { version = "0.18", optional = true }
# binswap deps — archive extraction + Windows running-exe replacement.
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
self-replace = { version = "1", optional = true }

[dev-dependencies]
# Deterministic Ed25519 test keypairs (PKCS#8 / SPKI PEM) for plan signing tests.
# `serde_json` is a normal dependency, so tests use it without re-declaring here.
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
# `rcgen` is also an optional runtime dep (behind `enroll`); the dev-dep keeps it
# available to plan/tls tests that run without that feature. `x509-parser` is
# dev-only: it enables `CertificateSigningRequestParams::from_pem` so a test can
# verify our generated CSR through the exact API the server uses. The shipped
# client only *generates* CSRs, so the runtime dep stays lean (`pem`, `ring`).
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }
time = "0.3"
# Enrollment integration test: local mock CA + async runtime.
httpmock = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
