[package]
name = "greentic-update"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Greentic update platform foundation: signed update plans, installed-artifact catalogue/diff, staging, and airgap envelopes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-update"
homepage = "https://github.com/greenticai/greentic-update"
documentation = "https://docs.greentic.ai/update"
keywords = ["greentic", "updater", "dsse", "in-toto", "signing"]
categories = ["development-tools"]

[dependencies]
# Only the (ungated) `signing` module is used today (DistClient lands with the
# download phase). `default-features = false` would be ideal, but
# distributor-client's `store_auth` module references the optional `dirs_next`
# crate without a cfg gate, so the minimal build does not compile — see the
# same note in greentic-operator-trust's Cargo.toml.
greentic-distributor-client = ">=1.1.0-dev, <1.4.0"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
hex = "0.4"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
# Deterministic Ed25519 test keypairs (PKCS#8 / SPKI PEM) for plan signing tests.
# `serde_json` is a normal dependency, so tests use it without re-declaring here.
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
