[package]
name = "greentic-update"
# STABLE LANE. `main` publishes the 1.1.x line; `develop` keeps the 0.1.<RUN_ID>
# dev line. The two do not overlap, so each consumer resolves within its own lane
# (`greentic-start@main` pins `>=1.1.0, <1.2.0-0`; `greentic-deployer@develop`
# pins `>=0.1.x, <0.2`). See the dependency note below for why one crate cannot
# serve both lanes from a single publish.
version = "1.1.1"
edition = "2024"
rust-version = "1.95"
description = "Greentic update platform foundation: signed update plans, installed-artifact catalogue/diff, staging, and airgap envelopes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/greenticai/greentic-update"
homepage = "https://github.com/greenticai/greentic-update"
documentation = "https://docs.greentic.ai/update"
keywords = ["greentic", "updater", "dsse", "in-toto", "signing"]
categories = ["development-tools"]

[features]
mtls = ["dep:reqwest", "dep:x509-parser"]
# Client-side cert enrollment (CSR generation + POST to the Cert-CA). Independent
# of `mtls` (does not need x509 parsing), but pairs with it: enroll → persist →
# build_mtls_client.
enroll = ["dep:reqwest", "dep:rcgen"]
# Binary self-update swap mechanics: archive unpack (tar+gzip, zip),
# atomic verified binary swap + rollback, container detection, and
# Windows running-exe replacement via `self-replace`. OFF by default
# to keep the lean build free of archive / compression deps.
binswap = ["dep:tar", "dep:flate2", "dep:zip", "dep:self-replace"]
# SSE (Server-Sent Events) transport for plan-update push notifications.
# Reuses the existing `reqwest` dep with the `blocking` feature added.
stream = ["dep:reqwest", "reqwest/blocking"]

[dependencies]
# Only the (ungated) `signing` module is used today (DistClient lands with the
# download phase). `default-features = false` would be ideal, but
# distributor-client's `store_auth` module references the optional `dirs_next`
# crate without a cfg gate, so the minimal build does not compile — see the
# same note in greentic-operator-trust's Cargo.toml.
#
# LANE-PINNED, and it has to be. This range is the only line that differs between
# `main` and `develop`, and it is why the crate needs two lanes at all: a version
# requirement cannot span them. Cargo admits a pre-release (`1.2.0-dev.N`) only
# when some comparator shares its exact `1.2.0`, so a range wide enough to reach
# the dev lane (`>=1.2.0-dev`) excludes stable 1.1.x, and a range covering 1.1.x
# silently excludes every `1.2.0-dev.*`. There is no union.
#
# `main` therefore pins the stable lane. A dev-lane range here is what froze
# `greentic-start@main` on the 2026-07-07 publish: its own direct `<1.2.0-0` pin
# on this crate could not intersect, so every newer `greentic-update` became
# unresolvable for the stable fleet. Nothing here needs a 1.2-only surface — the
# crate builds and tests clean against 1.1.3.
greentic-distributor-client = ">=1.1.0-0, <1.2.0-0"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
# Staging FSM (ungated `staging` module): `fs4` for the per-env `.lock` flock and
# the independent per-file audit-log flock; `tempfile` for the write-tmp → fsync
# → rename atomic-write pattern. Both are small, filesystem-only deps — the
# crate's leanness invariant is "no `greentic-deploy-spec` dep", not "no I/O
# deps"; on-disk staging inherently needs these.
fs4 = "0.13"
tempfile = "3"
hex = "0.4"
rcgen = { version = "0.14", optional = true, default-features = false, features = ["pem", "ring"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["rustls", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
x509-parser = { version = "0.18", optional = true }
# binswap deps — archive extraction + Windows running-exe replacement.
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
self-replace = { version = "1", optional = true }

[dev-dependencies]
# Deterministic Ed25519 test keypairs (PKCS#8 / SPKI PEM) for plan signing tests.
# `serde_json` is a normal dependency, so tests use it without re-declaring here.
ed25519-dalek = { version = "3", features = ["pkcs8", "pem"] }
# `rcgen` is also an optional runtime dep (behind `enroll`); the dev-dep keeps it
# available to plan/tls tests that run without that feature. `x509-parser` is
# dev-only: it enables `CertificateSigningRequestParams::from_pem` so a test can
# verify our generated CSR through the exact API the server uses. The shipped
# client only *generates* CSRs, so the runtime dep stays lean (`pem`, `ring`).
rcgen = { version = "0.14", default-features = false, features = ["pem", "ring", "x509-parser"] }
time = "0.3"
# Enrollment integration test: local mock CA + async runtime.
httpmock = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
